# S-09-Online-Misinformation-Awareness-Campaign-for-Young-Adults

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 294df3be34ee_add_analysis_summary_to_content.py  2a750f8800ff_add_analyzed_at_to_contents.py  721df421e575_add_content_table.py  7cc3b2315744_create_users_table.py  b827a100ad96_initial_schema.py
backend/app/: main.py
backend/app/ai/: gemini.py  parser.py  prompts.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  auth.py  content.py  root.py
backend/app/core/: config.py  exceptions.py
backend/app/database/: base.py  database.py  enums.py
backend/app/database/models/: __init__.py  content.py  user.py
backend/app/dependencies/: auth.py  database.py
backend/app/repositories/: content_repository.py  user_repository.py
backend/app/schemas/: analysis.py  auth.py  content.py  user.py
backend/app/security/: hashing.py  jwt.py
backend/app/services/: analysis_service.py  auth_service.py  content_service.py
docs/: README.md  backlog.md  dev-log.md  problem-statement.md  system-design.md
frontend/: README.md
